edited some overflow issues

--- a/scss/_desktopView.scss
+++ b/scss/_desktopView.scss
@@ -139,6 +139,7 @@
       align-items: center;
       padding: 30px 0px 0px 30px;
       z-index: -1000;
+      overflow-x: visible;
 
       .section-1_left {
         width: 100%;
@@ -147,6 +148,7 @@
         justify-content: space-between;
         gap: 20px;
         // align-items: center;
+        overflow-x: visible;
 
         &_text {
           display: flex;
@@ -155,6 +157,7 @@
           gap: 20px;
           width: 100%;
           z-index: 2;
+          overflow-x: visible;
 
           &-h2_wrapper {
             width: auto;
@@ -169,6 +172,7 @@
               top: 0;
               display: inline-block;
               font-size: 2rem;
+              overflow-x: visible;
             }
           }
 
@@ -213,11 +217,13 @@
         justify-content: flex-end;
         align-items: center;
 
+        overflow-x: visible;
+
         &-container {
           position: relative;
           width: 77%;
           height: 100%;
-          // background-color: antiquewhite;
+          overflow-x: visible;
 
           .secion-1_img_back-color {
             position: relative;
@@ -232,6 +238,7 @@
             box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
             // border-radius: 10px;
             z-index: 2;
+            overflow-x: visible;
           }
 
           .profile-img {
@@ -260,6 +267,7 @@
               height: 100%;
               object-fit: contain;
               transform: translateX(5%);
+              overflow-x: visible;
             }
           }
 
@@ -457,52 +465,6 @@
     }
 
     /*  */
-    .react-container {
-      position: absolute;
-      top: 130px;
-      right: 350px;
-
-      .react-axis {
-        width: 10px;
-        height: 10px;
-        /* background-color: deepskyblue; */
-        border-radius: 50%;
-        position: relative;
-
-        .react-wrapper {
-          width: 0%;
-          height: 0%;
-          position: absolute;
-          animation: rotation 6s infinite linear;
-          border-radius: 50%;
-          padding: 100px;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          z-index: 1;
-
-          .react-img {
-            width: 80px;
-            z-index: -1;
-          }
-        }
-
-        .react-wrapper::before {
-          content: "";
-          position: absolute;
-          left: -20px;
-          top: -20px;
-          /* border-radius: 50%; */
-          margin: 51px;
-        }
-      }
-
-      @keyframes rotation {
-        0% {
-          transform: translate(-50%, -50%) rotate(-360deg);
-        }
-      }
-    }
   }
 
   .section-3 {
@@ -579,6 +541,7 @@
         h2 {
           text-transform: capitalize;
           z-index: 60;
+          overflow-x: visible;
         }
       }
 
@@ -867,7 +830,7 @@
           }
         }
 
-        .full-view_container{
+        .full-view_container {
           display: none;
         }
 
