--- a/scss/_tabletView.scss
+++ b/scss/_tabletView.scss
@@ -207,12 +207,14 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        overflow-x: visible;
 
         &-container {
           position: relative;
           width: 77%;
           width: 95%;
           height: 100%;
+          overflow-x: visible;
 
           .secion-1_img_back-color {
             position: relative;
@@ -227,6 +229,7 @@
             box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
             // border-radius: 10px;
             z-index: 2;
+            overflow-x: visible;
           }
 
           .profile-img {
@@ -246,13 +249,16 @@
             // opacity: 0;
             transition: all 2s;
             transform: translate(50vw, 0);
+            overflow-x: visible;
 
             img {
               padding-top: 10px;
               width: 100%;
               height: 100%;
               object-fit: contain;
+
               transform: translateX(5%);
+              overflow-x: visible;
             }
           }
 
@@ -724,6 +730,8 @@
         left: 50%;
         transform: translateX(-50%);
         display: flex;
+        overflow-x: visible;
+
 
         .dots_dot {
           border: none;
@@ -758,6 +766,7 @@
     height: 100vh;
     background-color: $background-color;
     // z-index: 1;
+    overflow-x: visible;
 
     .section-3_back-color {
       display: none;
@@ -778,9 +787,11 @@
 
       .section-3_h2_wrapper {
         display: none;
+        overflow-x: visible;
 
         h2 {
           display: none;
+          overflow-x: visible;
         }
       }
 
